# py-basic

./: 20200211 01 变量 & 数据类型.py  20200211 02 传统格式化符号 & 拓展.py  20200211 03 新格式化符号.py  20200211 04 转义字符和输出结束符号.py  20200212 01 信息输入 & 数据转换.py  20200212 02 逻辑运算符 & 运算符号.py  20200212 03 if & if else & elif.py  20200212 04 if 嵌套.py  20200213 01 while 循环.py  20200213 02 if 的 break & continue.py  20200213 03 while 嵌套.py  20200213 04 for 循环.py  20200213 05 for 的 break & continue.py  20200213 06 else 的 break & continue.py  20200214 01 字符串基础.py  20200214 02 字符串操作.py  20200215 01 列表的查 & 增 & 删 & 改 & 复.py  20200215 02 列表的遍历 while & for.py  20200215 03 列表二维 & 切片.py  20200215 04 列表嵌套.py  20200215 05 列表实践.py  20200216 元组与元组遍历.py  20200217 01 字典基础.py  20200217 02 字典遍历.py  20200218 01 公共符号 & 公共方法.py  20200218 01 集合.py  20200218 02 九九乘法表 01.py  20200218 02 集合操作.py  20200218 03 九九乘法表 02.py  20200218 04 九九乘法表 03.py  20200218 05 九九乘法表 04.py  20200219 01 匿名函数 01 无参数.py  20200219 02 匿名函数 02 单参数.py  20200219 03 匿名函数 03 双参数.py  20200219 推导式（生成式）.py  20200220 01 函数基础.py  20200220 02 函数嵌套.py  20200220 03 变量作用域 & 执行流程 & 返回值 & 参数.py  20200220 04 拆包 & 交换变量值 & 引用 & 数据类型.py  20200220 05 递归.py  (+34 more)
20240419 三器一式/: 20240419 01 装饰器 01 单装饰器.py  20240419 01 装饰器 02 多装饰器.py  20240419 01 装饰器 03 参数装饰器.py  20240419 01 装饰器 04了类的装饰器.py  20240419 01 装饰器 05 装饰器类.py  20240419 01 装饰器 06 类内装饰器.py  20240419 01 装饰器 07 内省装饰器.py  20240419 02 迭代器 01.py  20240419 02 迭代器 02 模拟 for 循环.py  20240419 03 生成器 01 生成器函数.py  20240419 03 生成器 02 send.py  20240419 03 生成器 03.py  20240419 03 生成器 04.py  20240419 03 生成器 05.py  20240419 03 生成器 06.py  (+46 more)
(+69 files in other folders)
