[project]
name = "py-ml-pt-rnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faker>=37.11.0",
    "greenlet>=3.2.4",
    "pandas>=2.3.3",
    "pandas-stubs==2.3.2.250926",
    "psycopg2>=2.9.11",
    "snowflake>=1.8.0",
    "sqlalchemy>=2.0.44",
    "tqdm>=4.67.1",
    "uvloop>=0.22.1",
]

[tool.git-changelog]
bump = "auto"
convention = "conventional"
in-place = false
filter-commits = ""
marker-line = "<!-- insertion marker for GitHub -->"
output = "CHANGELOG.md"
parse-refs = true
parse-trailers = true
provider = "github"
repository = "."
sections = ["feat", "fix", "chore", "docs", "perf", "build", "refactor", "test", "deps"]
template = "angular"
version-regex = "^## \\[(?P<version>v?[^\\]]+)"
versioning = "semver"
zerover = false

[dependency-groups]
dev = [
    "black>=25.9.0",
    "git-changelog>=2.6.3",
    "ruff>=0.14.2",
]
